merged_repo.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\xau_rl\paper_demo\paper_loop_mt5_demo.py", line 51
    SLEEP_SEC = int(cfg.get('env', {}).get('sleep_sec', 30)
                   ^
SyntaxError: '(' was never closed
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\xau_rl\paper_demo\paper_loop_mt5_demo.py", line 51
    SLEEP_SEC = int(cfg.get('env', {}).get('sleep_sec', 30)
                   ^
SyntaxError: '(' was never closed
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\xau_rl\paper_demo\paper_loop_mt5_demo.py", line 51
    SLEEP_SEC = int(cfg.get('env', {}).get('sleep_sec', 30)
                   ^
SyntaxError: '(' was never closed
